<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_example_ip"
        android:inputType="textCapWords"
        android:key="example_ip"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_ip"/>

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_example_port"
        android:inputType="textCapWords"
        android:key="example_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_port" />
</PreferenceScreen>
