<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgRow"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="7dp"
            android:contentDescription="string/thumbnail"
            android:src="@color/common_google_signin_btn_text_dark_focused"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/userTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/User1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/username"
                android:textSize="15sp"
                android:textStyle="italic"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <ImageView
            android:id="@+id/img_row_delete"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="7dp"
            android:contentDescription="@string/delete_img"
            card_view:srcCompat="@drawable/ic_delete_black_24dp"
            android:tint="@color/grey_500"/>

        <ImageView
            android:id="@+id/img_row_edit"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="7dp"
            android:contentDescription="@string/add_img"
            card_view:srcCompat="@drawable/ic_edit_black_24dp"
            android:tint="@color/grey_500"/>
    </LinearLayout>
</android.support.v7.widget.CardView>

